# DECODE_Cloud_Documentation

./: 404.html  Overview.md  README.md  index.html  mkdocs.yml  pyproject.toml
1_overview/: 1_1_Repositories.md  1_2_Workflow.md  1_3_Design.md
1_overview/graphics/: repos_dependencies.drawio
2_guides/: 2_1_Applications.md  2_2_Users.md  2_3_Testing.md  2_4_Debugging.md
architecture/data/: index.html
architecture/design/: index.html
architecture/graphics/: training_sequence_diagram.drawio
architecture/repositories/: index.html
architecture/workflow/: index.html
developer/applications/: index.html
developer/debugging/: index.html
developer/developing/: index.html
developer/testing/: index.html
developer/users/: index.html
docs/: copy_readme.md  index.md
docs/architecture/: data.md  design.md  repositories.md  workflow.md
docs/architecture/graphics/: repos_overview.drawio
docs/developer/: applications.md  debugging.md  developing.md  domains.md  testing.md  users.md
graphics/Overview/: repos_overview.drawio
search/: search_index.json
