[tool.poetry]
name = "decode-cloud-documentation"
version = "0.1.0"
description = "Documentation for DECODE OpenCloud"
authors = ["nolan1999 <arthur.jaques@hispeed.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
